syntax = "proto3";
option csharp_namespace = "Aevatar.Agents.AI.WithTool.Messages";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

// AI Tool Invocation Event - Records when AI invokes a tool/function
message AIToolInvocationEvent {
    string tool_name = 1;                       // Name of the tool invoked
    string tool_input = 2;                      // Input provided to the tool
    string tool_output = 3;                     // Output from the tool
    bool success = 4;                           // Whether the invocation succeeded
    string error_message = 5;                   // Error message if failed
    int32 tokens_used = 6;                      // Tokens used for this invocation
    google.protobuf.Timestamp timestamp = 7;    // When the tool was invoked
}

// Tool Execution Request Event
message ToolExecutionRequestEvent {
    string request_id = 1;
    string tool_name = 2;
    string arguments = 3;
    google.protobuf.Timestamp timestamp = 4;
}

// Tool Execution Response Event
message ToolExecutionResponseEvent {
    string request_id = 1;
    string tool_name = 2;
    bool success = 3;
    string result = 4;
    string error = 5;
    google.protobuf.Timestamp timestamp = 6;
}

// Tool executed event (published when a tool completes)
message AevatarToolExecutedEvent {
  string tool_name = 1;
  map<string, string> parameters = 2;
  string result = 3;
  bool success = 4;
  google.protobuf.Timestamp timestamp = 5;
  string agent_id = 6;
  int64 execution_time_ms = 7;
}

// AI Tool result
message AevatarAIToolResult {
  bool success = 1;
  google.protobuf.Any data = 2;
  string error_message = 3;
  map<string, string> metadata = 4;
}

// AI Tool context
message AevatarAIToolContext {
  string agent_id = 1;
  string session_id = 2;
  string user_id = 3;
  map<string, string> metadata = 4;
  // Note: ServiceProvider and CancellationToken can't be serialized
  // These will be injected at runtime via partial class
}

// Execution context (from ToolDefinition.cs)
message AevatarToolExecutionContext {
  string agent_id = 1;
  string session_id = 2;
  string user_id = 3;
  map<string, string> metadata = 4;
}